# livraria

./: livraria_bkp.json  pyproject.toml  requirements.txt
config/: settings.py  urls.py
livraria/: admin.py
livraria/migrations/: 0001_initial.py  0002_livros_capa.py
livraria/models/: __init__.py  autor.py  livro.py
livraria/serializers/: __init__.py  livro.py
livraria/views/: __init__.py  autor.py  categoria.py  editora.py  livro.py
src/: App.vue
src/api/: autor.js  editora.js
src/components/: LivroAutores.vue
src/router/: index.js
src/views/: AutorView.vue  EditoraView.vue  LivroView.vue
uploader/: admin.py  views.py
uploader/migrations/: 0001_initial.py
uploader/serializers/: image.py
usuario/: models.py  serializers.py
usuario/migrations/: 0001_initial.py
