
[project]
name = ""
version = ""
description = ""
authors = [
    {name = "", email = ""},
]
dependencies = [
    "django>=4.2.2",
    "djangorestframework>=3.14.0",
    "django-cors-headers>=4.1.0",
    "djangorestframework-simplejwt>=5.2.2",
    "setuptools>=68.0.0",
    "python-magic>=0.4.27",
    "Pillow>=9.5.0",
    "drf-spectacular>=0.26.3",
    "django-environ>=0.10.0",
    "mysqlclient>=2.2.0",
]
requires-python = ">=3.10"
license = {text = "MIT"}
